native-cli/components/embedded/nativelink-gateways.yaml
# TODO(aaronmondal): There should just be a single gateway. But that's currently
#                    bugged: https://github.com/cilium/cilium/issues/29099
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cache-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: cache-gateway
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: scheduler-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: scheduler-gateway
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: el-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: el-gateway
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: hubble-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: hubble-gateway
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tkn-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: tkn-gateway
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - tekton-pipelines
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: capacitor-gateway
  namespace: flux-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: capacitor-gateway
      protocol: HTTP
      port: 80
